@@ -187,11 +187,21 @@
 
 @end
 
+#pragma mark - CCEventObject
 
-#pragma mark -
-#pragma mark CCEventDispatcher
+@interface CCEventObject : NSObject
+{
+@public
+	NSEvent		*event;
+	SEL			selector;
+}
+@end
+
+#pragma mark - CCEventDispatcher
 
 struct _listEntry;
+struct _listDeletedEntry;
+struct _listAddedEntry;
 
 /** CCEventDispatcher
  
@@ -205,10 +215,14 @@ struct _listEntry;
 @interface CCEventDispatcher : NSObject <MacEventDelegate> {
 
 	BOOL					dispatchEvents_;
+    BOOL					dispatchingInProgress_;
 	
 	struct	_listEntry		*keyboardDelegates_;
 	struct	_listEntry		*mouseDelegates_;
 	struct	_listEntry		*touchDelegates_;
+    
+    struct	_listDeletedEntry	*delegatesToBeRemoved_;
+	struct	_listAddedEntry		*delegatesToBeAdded_;
 }
 
 @property (nonatomic, readwrite) BOOL dispatchEvents;
@@ -265,11 +279,7 @@ struct _listEntry;
 /** Removes all touch delegates, releasing all the delegates */
 - (void)removeAllTouchDelegates;
 
-#pragma mark CCEventDispatcher - Dispatch Events
-
-#if CC_DIRECTOR_MAC_USE_DISPLAY_LINK_THREAD
--(void) dispatchQueuedEvents;
-#endif
+-(void) dispatchEvent:(CCEventObject*)event;
 
 @end
 
